--- a/lession1/Index.html
+++ b/lession1/Index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <title>Index.html</title>
 <head>
  <meta charset="utf-8">
@@ -6,22 +6,22 @@
 </head>
 
 <body>
- <heading class=g2>
+ <heading class="grid">
   <h1 class="name">Zachary Carter</h1>
   <img class="pic" src="portrat1.jpg">
+
  </heading>
 
- <main class="grid">
+ <main class="g2">
   <h2 class="n1" >WDD 230: assingment portal</h2> 
-  <p class="n2" >lesson 2</p>
-  <p class="n3">lesson 3</p>
-  <p class="n4">lesson 4</p>
-  <p class="n5">lesson 5</p>
-  <p class="n6">lesson 6</p>
+  <p class="n2" >lesson 2 <a href="">Assingment link</a></p>
+  <p class="n3">lesson 3 <a href="">Assingment link</a></p>
+  <p class="n4">lesson 4 </p>
+  
  </main>
 </body>
 
-<footer>
+<footer class=foot>
     <div>@4/25/2020<div>
     <a href="https://developer.mozilla.org/en-US/">link text</a>
 </footer>
