--- a/lesson4/Preston.html
+++ b/lesson4/Preston.html
@@ -15,8 +15,7 @@
    &#9776;
  </div>
 
-<nav>
-
+<nav class="grid">
      <ul class="mainMenu">
       <p>Home</p>
       <p>Prestion</p>
@@ -25,16 +24,15 @@
       <p>Haven</p>
       <p>Storm Center</p>
       <p>Gallery</p>
-   </ul>
+     </ul>
 </nav>
 
  <Script src="js/Toggle.js"></script>
 
- <main class="grid">
+ <main class="grid2">
    <h2 class="part2">Prestion</h2>
- <section class="part">
-    <p>Today's Forcast<p>
- </section>
+   <p class="part">Today's Forcast<p>
+ 
 
  </main>
  <footer class=foot>
