--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -13,9 +13,7 @@
 
 </header>
 
- <main class="grid2">
-        <h2></h2> 
-     
+ <main class="grid2"> 
         <h1 class="name">Lazy Loading example</h1>
         <img class="pic1" data-src="images/rainy2Cropped.jpg">
         <img class="pic2" data-src="images/franklinOriginalCropped.jpg">
@@ -23,7 +21,8 @@
         <img class="pic4" data-src="images/Weather IconCropped.png">
         <img class="pic5" data-src="images/DonutsCropped.jpg">
  </main>
- <script src="lazy-load.js"></script>
+
+ <Script src="lazy-load.js"></Script>
  
  <footer class=foot>
     <div>@1/22/2021 | Zachary Carter | Idaho | 
