--- a/lesson9/index.html
+++ b/lesson9/index.html
@@ -21,7 +21,7 @@
   <ul class="mainMenu">
     <a class="p1" herf="index.html">Home</a>
     <a class="p2" herf="prestion-6">Prestion</a>
-    <a class="p3" herf="">Soda Springs</a>
+    <a class="p3" herf="sodaSprings">Soda Springs</a>
     <a class="p4" herf="">Fish</a>
     <a class="p5" herf="">Haven</a>
     <a class="p6" herf="stormcenter.html">Storm Center</a>
