--- a/lesson9/stormcenter.html
+++ b/lesson9/stormcenter.html
@@ -18,13 +18,13 @@
  
 <nav class="grid">
   <ul class="mainMenu">
-   <li class="p1">Home</li>
-   <li class="p2">Prestion</li>
-   <li class="p3">Soda Springs</li>
-   <li class="p4">Fish</li>
-   <li class="p5">Haven</li>
-   <li class="p6">Storm Center</li>
-   <a class="p7" href="gallery-7.html">Gallery</a>
+    <a class="p1" herf="index.html">Home</a>
+    <a class="p2" herf="prestion-6">Prestion</a>
+    <a class="p3" herf="sodaSprings">Soda Springs</a>
+    <a class="p4" herf="">Fish</a>
+    <a class="p5" herf="">Haven</a>
+    <a class="p6" herf="stormcenter.html">Storm Center</a>
+    <a class="p7" href="gallery-7.html">Gallery</a>
   </ul>
 </nav>
 
