--- a/WeatherSite/gallery.html
+++ b/WeatherSite/gallery.html
@@ -8,11 +8,11 @@
 
 <body onload="windchill()">
 
- <header class="titleThing">
-    <img src="images/Weather Icon.png" class="pod">
+  <header class="titleThing">
+    <img src="images/Weather Icon.png">
     <h1>Wake up Weather</h1>
-  <!--  <h3>we do weather while you do you.</h3>-->
- </header>
+    <h3>we do weather while you do you.</h3>
+  </header>
 
  <div class="hamIcon" onclick="toggleClass()">
    &#9776;
@@ -22,18 +22,17 @@
     <ul class="mainMenu">
       <li><a class="p1" href="index.html">Home</a></li>
       <li><a class="p2" href="prestion.html">Prestion</a></li>
-      <li><a class="p3" href="">Soda Springs</a></li>
-      <li><a class="p4" href="">Fish</a></li>
-      <li><a class="p5" href="">Haven</a></li>
-      <li><a class="p6" href="stormcenter.html">Storm Center</a></li>
-      <li><a class="p7" href="gallery.html">Gallery</a></li>
+      <li><a class="p3" href="soda_springs.html">Soda Springs</a></li>
+      <li><a class="p4" href="fish_haven.html">Fish Haven</a></li>
+      <li><a class="p5" href="stormcenter.html">Storm Center</a></li>
+      <li><a class="p6" href="gallery.html">Gallery</a></li>
    </ul>
  </nav>
 
  <Script src="js/Toggle.js"></script>
  
  <main >
-   <h1>gallery</h1>
+   <h1 class="ti">Gallery</h1>
    <section class="grid2">
    <img class="class1" data-src="images/andre-furtadoCropped.jpg">
    <img class="class2" data-src="images/binyamin-mellishCropped.jpg">
