--- a/lesson9/stormcenter.html
+++ b/lesson9/stormcenter.html
@@ -6,10 +6,9 @@
 </head>
 
 <header class="titleThing">
-   <img src="images/Weather Icon.png" class="pod">
-   <h1>Wake up Weather</h1><br>
-   <!--<h3>we do weather while you do you.</h3>-->
-
+    <img src="images/Weather Icon.png">
+    <h1>Wake up Weather</h1>
+    <h3>we do weather while you do you.</h3>
 </header> 
 
 <div class="hamIcon" onclick="toggleClass()">
@@ -18,24 +17,21 @@
  
 <nav class="grid">
   <ul class="mainMenu">
-    <a class="p1" herf="index.html">Home</a>
-    <a class="p2" herf="prestion-6">Prestion</a>
-    <a class="p3" herf="sodaSprings">Soda Springs</a>
-    <a class="p4" herf="">Fish</a>
-    <a class="p5" herf="">Haven</a>
-    <a class="p6" herf="stormcenter.html">Storm Center</a>
-    <a class="p7" href="gallery-7.html">Gallery</a>
-  </ul>
+    <li><a class="p1" href="index.html">Home</a></li>
+    <li><a class="p2" href="prestion.html">Prestion</a></li>
+    <li><a class="p3" href="soda_springs.html">Soda Springs</a></li>
+    <li><a class="p4" href="fish_haven.html">Fish Haven</a></li>
+    <li><a class="p5" href="stormcenter.html">Storm Center</a></li>
+    <li><a class="p6" href="gallery.html">Gallery</a></li>
+ </ul>
 </nav>
 
 <Script src="js/Toggle.js"></script>
 
 
 <body class="form1">
- <header class="grid"><h1 class="name">Weather At 6</h1>
-    <img class="pic" src=""></header>
- 
-  <main class="grid2">
+  <h1 class="ti">Report Storm Here</h1>
+  <main>
      
   <form class="form1" method="GET" action="Thankyou.html">
    <formset>
@@ -72,7 +68,7 @@
    
    <label for="addInfo">Additional Information or Comments</label><br>
    <textarea type="textaria" rows="10" cols="30"></textarea><br>
-   <lable for="sub" ></lable>
+   <lable for="sub"></lable>
    </formset>
    <input type="submit" value="submit" class="botton">
   </form>
@@ -100,6 +96,7 @@
       <div class="f4">Last Updated: 1/22/2021</div>
   </footer>
 
+  <Script src="lazy-load.js"></script>
 
 </body>
 
