--- a/lesson9/index.html
+++ b/lesson9/index.html
@@ -1,50 +1,49 @@
 <!doctype html>
 <title>Weather At 6</title>
+
 <head>
- <meta charset="utf-8">
- <link type="text/css" rel="stylesheet" href="css/normalize.css">
+  <meta charset="utf-8">
+  <link type="text/css" rel="stylesheet" href="css/normalize.css">
 </head>
 
 <body>
   <header class="titleThing">
-    <img src="images/Weather Icon.png" class="pod">
+    <img src="images/Weather Icon.png">
     <h1>Wake up Weather</h1>
-  <!--  <h3>we do weather while you do you.</h3>-->
+    <h3>we do weather while you do you.</h3>
+  </header>
 
- </header> 
- 
- <div class="hamIcon" onclick="toggleClass()">
-   &#9776;
- </div>
-  
-<nav class="grid">
-  <ul class="mainMenu">
-    <a class="p1" herf="index.html">Home</a>
-    <a class="p2" herf="prestion-6">Prestion</a>
-    <a class="p3" herf="sodaSprings">Soda Springs</a>
-    <a class="p4" herf="">Fish</a>
-    <a class="p5" herf="">Haven</a>
-    <a class="p6" herf="stormcenter.html">Storm Center</a>
-    <a class="p7" href="gallery-7.html">Gallery</a>
-  </ul>
-</nav>
+  <div class="hamIcon" onclick="toggleClass()">
+    &#9776;
+  </div>
 
- <Script src="js/Toggle.js"></script>
-     
-  <main >
-    
-    <div id="inCards" class="card" class="found" class="pop" class="rain"></div>
+  <nav class="grid">
+    <ul class="mainMenu">
+      <li><a class="p1" href="index.html">Home</a></li>
+      <li><a class="p2" href="prestion.html">Prestion</a></li>
+      <li><a class="p3" href="soda_springs.html">Soda Springs</a></li>
+      <li><a class="p4" href="fish_haven.html">Fish Haven</a></li>
+      <li><a class="p5" href="stormcenter.html">Storm Center</a></li>
+      <li><a class="p6" href="gallery.html">Gallery</a></li>
+   </ul>
+  </nav>
+
+  <Script src="js/Toggle.js"></script>
+
+  <main>
+
+    <div id="InCards" class="card" class="found" class="pop" class="rain"></div>
 
   </main>
 
- <footer class="foot">
-  <div class="f1">Contacy Info</div>
-  <div class="f2">Phone Number: 410-610-6403</div>
-  <div class="f3">Email: z.carter009@gmail.com</div>
-  <div class="f4">Last Updated: 1/22/2021</div>
-</footer>
-<script src="indexCards.js"></script>
-
+  <footer class="foot">
+    <div class="f1">Contacy Info</div>
+    <div class="f2">Phone Number: 410-610-6403</div>
+    <div class="f3">Email: z.carter009@gmail.com</div>
+    <div class="f4">Last Updated: 1/22/2021</div>
+  </footer>
+  <script src="indexCards.js"></script>
+  <Script src="lazy-load.js"></script>
 </body>
 
 <html>
