--- a/lesson9/gallery-7.html
+++ b/lesson9/gallery-7.html
@@ -7,36 +7,33 @@
 
 
 <body onload="windchill()">
-   <div class="activate">
-   <p>"Saturday = Preston Pancakes in the Park!  9:00 a.m. Saturday at the city park pavilion."</p>
-   </div>
-   <script src="js/Banner.js"></script>
- <header class="titleThing">
-    <img src="images/Weather Icon.png" class="pod">
+
+  <header class="titleThing">
+    <img src="images/Weather Icon.png">
     <h1>Wake up Weather</h1>
-  <!--  <h3>we do weather while you do you.</h3>-->
- </header>
+    <h3>we do weather while you do you.</h3>
+  </header>
 
  <div class="hamIcon" onclick="toggleClass()">
    &#9776;
  </div>
-  
+
  <nav class="grid">
     <ul class="mainMenu">
-      <a class="p1" herf="index.html">Home</a>
-      <a class="p2" herf="prestion-6">Prestion</a>
-      <a class="p3" herf="">Soda Springs</a>
-      <a class="p4" herf="">Fish</a>
-      <a class="p5" herf="">Haven</a>
-      <a class="p6" herf="stormcenter.html">Storm Center</a>
-      <a class="p7" href="gallery-7.html">Gallery</a>
+      <li><a class="p1" href="index.html">Home</a></li>
+      <li><a class="p2" href="prestion.html">Prestion</a></li>
+      <li><a class="p3" href="soda_springs.html">Soda Springs</a></li>
+      <li><a class="p4" href="fish_haven.html">Fish Haven</a></li>
+      <li><a class="p5" href="stormcenter.html">Storm Center</a></li>
+      <li><a class="p6" href="gallery.html">Gallery</a></li>
    </ul>
  </nav>
 
  <Script src="js/Toggle.js"></script>
  
- <main class="grid2">
-   
+ <main >
+   <h1 class="ti">Gallery</h1>
+   <section class="grid2">
    <img class="class1" data-src="images/andre-furtadoCropped.jpg">
    <img class="class2" data-src="images/binyamin-mellishCropped.jpg">
    <img class="class3" data-src="images/brett-saylesCropped.jpg">
@@ -46,8 +43,9 @@
    <img class="class7" data-src="images/franklinOriginalCropped.jpg">
    <img class="class8" data-src="images/johannes-plenioCropped.jpg">
    <img class="class9" data-src="images/freestocksorgCropped.jpg">
+   </section>
  </main>
- <Script src="lazy-load-Copy.js"></script>
+ <Script src="lazy-load.js"></script>
  
 
  <footer class="foot">
