--- a/WeatherSite/Thankyou.html
+++ b/WeatherSite/Thankyou.html
@@ -21,21 +21,21 @@
   <ul class="mainMenu">
     <li><a class="p1" href="index.html">Home</a></li>
     <li><a class="p2" href="prestion.html">Prestion</a></li>
-    <li><a class="p3" href="">Soda Springs</a></li>
-    <li><a class="p4" href="">Fish</a></li>
-    <li><a class="p5" href="">Haven</a></li>
-    <li><a class="p6" href="stormcenter.html">Storm Center</a></li>
-    <li><a class="p7" href="gallery.html">Gallery</a></li>
-  </ul>
+    <li><a class="p3" href="soda_springs.html">Soda Springs</a></li>
+    <li><a class="p4" href="fish_haven.html">Fish Haven</a></li>
+    <li><a class="p5" href="stormcenter.html">Storm Center</a></li>
+    <li><a class="p6" href="gallery.html">Gallery</a></li>
+ </ul>
 </nav>
 
  <Script src="js/Toggle.js"></script>
-     
+
+ <h2 class="ti" class="part1">Thank you for filling out our form.</h2>
+
   <main class="grid2">
-    <h2 class="part1">Thank you for filling out our form</h2> 
+     
   </main>
 
- </main>
  <footer class="foot">
   <div class="f1">Contacy Info</div>
   <div class="f2">Phone Number: 410-610-6403</div>
