--- a/WeatherSite/index.html
+++ b/WeatherSite/index.html
@@ -32,7 +32,7 @@
 
   <main>
 
-    <div id="InCards" class="card" class="found" class="pop" class="rain"></div>
+    <div Id="grid2" class="card" class="found" class="pop" class="rain"></div>
 
   </main>
 
