--- a/WeatherSite/stormcenter.html
+++ b/WeatherSite/stormcenter.html
@@ -6,10 +6,9 @@
 </head>
 
 <header class="titleThing">
-   <img src="images/Weather Icon.png" class="pod">
-   <h1>Wake up Weather</h1><br>
-   <!--<h3>we do weather while you do you.</h3>-->
-
+    <img src="images/Weather Icon.png">
+    <h1>Wake up Weather</h1>
+    <h3>we do weather while you do you.</h3>
 </header> 
 
 <div class="hamIcon" onclick="toggleClass()">
@@ -20,21 +19,18 @@
   <ul class="mainMenu">
     <li><a class="p1" href="index.html">Home</a></li>
     <li><a class="p2" href="prestion.html">Prestion</a></li>
-    <li><a class="p3" href="">Soda Springs</a></li>
-    <li><a class="p4" href="">Fish</a></li>
-    <li><a class="p5" href="">Haven</a></li>
-    <li><a class="p6" href="stormcenter.html">Storm Center</a></li>
-    <li><a class="p7" href="gallery.html">Gallery</a></li>
-  </ul>
+    <li><a class="p3" href="soda_springs.html">Soda Springs</a></li>
+    <li><a class="p4" href="fish_haven.html">Fish Haven</a></li>
+    <li><a class="p5" href="stormcenter.html">Storm Center</a></li>
+    <li><a class="p6" href="gallery.html">Gallery</a></li>
+ </ul>
 </nav>
 
 <Script src="js/Toggle.js"></script>
 
 
 <body class="form1">
- <header class="grid"><h1 class="name">Weather At 6</h1>
-    <img class="pic" src=""></header>
- 
+  <h1 class="ti">Report Storm Here</h1>
   <main>
      
   <form class="form1" method="GET" action="Thankyou.html">
