--- a/WeatherSite/prestion.html
+++ b/WeatherSite/prestion.html
@@ -35,6 +35,8 @@
 
   </nav>
 
+  <!-- 0f51ee23d8c7dfd99e2908b9a2ffe942 -->
+
   <Script src="js/Toggle.js"></script>
 
   <main class="grid3">
@@ -56,20 +58,19 @@
         <h3>Weather Summary </h3>
         <p>Currently: <span id="cur"></p>
         <p>High: <span id="tp"></p>
-        <p>Wind Chill:  <span id="windc">
-        </p>
+        <p>Wind Chill:  <span id="windc"></p>
         <p>Humidity: <span id="humi"></p>
         <p>Wind Speed: <span id="winds"></p>
       </section>
+
       <section class="part3">
         <h3>
           Five Day Forcast
          </h3>
       </section>
     
-
     <section class="part4">
-    <div id="Incard2" class="card" class="day" class="icon" class="temp"> </div>
+    <div id="Incard2" class="card" class="day" class="icon" class="temp"></div>
     </section>
 
       <section class="part5">
@@ -97,7 +98,6 @@
   <Script src="lazy-load.js"></script>
   <Script src="js/forcastPreston.js"></script>
   <script src="js/5dayprestion.js"></script>
-  
 </body>
 
 <html>
