--- a/WeatherSite/fish_haven.html
+++ b/WeatherSite/fish_haven.html
@@ -55,9 +55,8 @@
       <h3>Weather Summary </h3>
       <p>Currently: <span id="cur"></span> </p>
       <p>High: <span id="tp"></span></p>
-      <p>Wind Chill:  <span id="wind"></span>
-      </p>
-      <p>Humidity: <span id="Humi"></p>
+      <p>Wind Chill:  <span id="windc"></span></p>
+      <p>Humidity: <span id="humi"></p>
       <p>Wind Speed: <span id="winds"></p>
     </section>
 
@@ -67,41 +66,9 @@
       </h3>
     </section>
 
-    <table class="part4">
-      <tr>
-        <th>Monday</th>
-        <th>Tuesday</th>
-        <th>Wensday</th>
-        <th>Thursday</th>
-        <th>Friday</th>
-      </tr>
-      <tr>
-        <th>
-          <img class="sunnys" src="images/Weather Icon.png"></img>
-        </th>
-        <th>
-          <img class="sunnys" src="images/Weather Icon.png"></img>
-        </th>
-        <th>
-          <img class="sunnys" src="images/Weather Icon.png"></img>
-        </th>
-        <th>
-          <img class="sunnys" src="images/Weather Icon.png"></img>
-        </th>
-        <th>
-          <img class="sunnys" src="images/Weather Icon.png"></img>
-        </th>
-
-      </tr>
-      <tr>
-        <th>89°F</th>
-        <th>87°F</th>
-        <th>78°F</th>
-        <th>75°F</th>
-        <th>72°F</th>
-      </tr>
-    </table>
-
+    <section class="part4">
+      <div id="Incard2" class="card" class="day" class="icon" class="temp"></div>
+      </section>
 
     <section class="part5">
       <h3>Bear Lake</h3>
@@ -125,7 +92,8 @@
   </footer>
 
   <Script src="lazy-load.js"></script>
-  <Script src="js/windchill.js"></script>
+  <Script src="js/forcastPreston.js"></script>
+  <script src="js/5dayprestion.js"></script>
 </body>
 
 <html>
